# SeniorProjectRobotVac2025

./: .gitmodules  README.md
Service_Robot/Pico_Programing/: .gitignore  CMakeLists.txt  README.md  b.sh
Service_Robot/Pico_Programing/.cache/clangd/index/: FreeRTOS.h.B53F071E06B5C37B.idx  FreeRTOSConfig.h.10350C9F2B636FFB.idx  FreeRTOSConfig_examples_common.h.E10EF1B474E0DCAD.idx  address_mapped.h.C8D5C209AE52B66A.idx  addressmap.h.2F330689DEE8AE55.idx  arch_threadsafe_background.h.C02BB5E5E478D379.idx  asm_helper.S.97B7D56010FE4100.idx  assert.h.A500EF15438DFF99.idx  async_context.h.E178F5FAC1E9791F.idx  async_context_base.c.417C520721011FB8.idx  async_context_base.h.0BF81B7F6B28D446.idx  async_context_freertos.c.FADE596E11B15248.idx  async_context_freertos.h.08FEA24AB9F48DDD.idx  async_context_threadsafe_background.c.C47FB6DF82B47DF0.idx  async_context_threadsafe_background.h.4D036DF456D6386E.idx  atomic.c.CDF1A3AA095A5E7C.idx  audio_device.c.4CA3993AD80A08CA.idx  binary_info.h.94697F0E94021E1F.idx  bit_ops_aeabi.S.7DD5DC4199D76BDD.idx  boot2_w25q080.S.4DCA1BBB0AF1F0F1.idx  boot_lock.c.B8B61A5DC5052E60.idx  boot_lock.h.E9BF33125CA60E25.idx  bootrom.c.9FC6D8F7B9E53112.idx  bootrom.h.2BD3EFAC2AD42E05.idx  bootrom_constants.h.B0E60936C250C2B4.idx  bootrom_constants.h.C23ABC9970FDF34F.idx  bootrom_lock.c.56EFD26BBF29AB77.idx  cdc.h.5BF53E795D063A4F.idx  cdc_device.c.355278D223AA46BD.idx  cdc_device.h.042A9B679278151A.idx  claim.c.1CEECC0F9605A529.idx  claim.h.1050559564AF8511.idx  (+273 more)
Service_Robot/Pico_Programing/src/: consts.h  functions.c  main.c  mainConfig.h
(+12 files in other folders)
